Fix sorthand textarea linebreaks in Firefox

--- a/waifus-bootstrap.css
+++ b/waifus-bootstrap.css
@@ -481,7 +481,7 @@ nav {
 }
 
 textarea.sorthand-output {
-    white-space: nowrap;
+    white-space: pre;
     overflow: auto;
 }
 
